crowd-ldap/crowd-ldap/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: crowd
  namespace: dft
spec:
  selector:
    app: crowd
  ports:
    - protocol: TCP
      port: 8095
      targetPort: 8095
      name: crowd
    - protocol: TCP
      port: 10389
      targetPort: 10389
      name: crowd-ldap
