crowd-ldap/crowd-ldap/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crowd-ldap-ingress
  namespace: dft
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
#  tls:
#  - hosts:
#    - crowd.dft.vn
#    secretName: crowd-ldap-tls
  rules:
  - host: crowd.dft.vn
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crowd
            port:
              number: 8095
#  ingressClassName: nginx
